--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ crossbeam = "0.8.4"
 arc-swap = "1.7.1"
 ordered-float = "5.0.0"
 rounded-div = "0.1.3"
+rayon = "1.11.0"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["libloaderapi", "minwindef", "mmsystem"] }
