--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 memmap2 = "0.9.5"
 eframe = { version = "0.31.1", features = ["glow"] }
+egui_double_slider = "0.8.0"
 egui_extras = { version = "0.31.1", features = ["image"] }
 rfd = "0.14"
 itertools = "0.14.0"
@@ -17,6 +18,8 @@ arc-swap = "1.7.1"
 ordered-float = "5.0.0"
 rounded-div = "0.1.3"
 rayon = "1.11.0"
+png = "0.18.0"
+image = "0.25.8"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["libloaderapi", "minwindef", "mmsystem"] }
