--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ as-any = "0.3.2"
 mlua = { version = "0.11.4", features = ["luajit", "vendored"] }
 include_dir = "0.7"
 luajit-src = "210.6.1"
+indexmap = "2.12.0"
+regex = "1.12.2"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "macos"))'.dependencies]
 kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "994220f" }
