--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ include_dir = "0.7"
 luajit-src = "210.6.1"
 indexmap = "2.12.0"
 regex = "1.12.2"
+lazy_static = "1.5.0"
+opener = "0.8.3"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "macos"))'.dependencies]
 kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "994220f" }
