--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ indexmap = "2.12.0"
 regex = "1.12.2"
 lazy_static = "1.5.0"
 opener = "0.8.3"
+sysinfo = "0.36.1"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "macos"))'.dependencies]
 kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "994220f" }
