--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ regex = "1.12.2"
 lazy_static = "1.5.0"
 opener = "0.8.3"
 sysinfo = "0.36.1"
+reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls" ]}
+serde_json = "1.0"
+dotenvy = "0.15.7"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "macos"))'.dependencies]
 kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "994220f" }
