--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ sysinfo = "0.36.1"
 reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls" ]}
 serde_json = "1.0"
 dotenvy = "0.15.7"
+chrono = "0.4.43"
+crossterm = "0.29.0"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "macos"))'.dependencies]
 kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "994220f" }
